--- a/app/src/main/res/layout/fragment_buy_ticket.xml
+++ b/app/src/main/res/layout/fragment_buy_ticket.xml
@@ -14,13 +14,13 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"/>
 
-
     <LinearLayout
         android:id="@+id/movies_layout"
         android:layout_width="384dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/text_repertuar"
         android:orientation="vertical" />
+
     <EditText
         android:id="@+id/editText_movie_input"
         android:layout_width="match_parent"
@@ -32,24 +32,35 @@
         android:layout_centerHorizontal="true"
         android:layout_marginHorizontal="20dp"
         android:inputType="text"/>
-    <Button
-        android:id="@+id/button_choose_movie"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:text="Wybierz film"
-        android:textSize="25sp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/rounded_button"
-        android:layout_below="@id/editText_movie_input"/>
 
-    <Button
-        android:id="@+id/button_pay_with_paypal"
-        android:layout_width="197dp"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/button_choose_movie"
-        android:layout_centerHorizontal="true"
+        android:layout_below="@id/editText_movie_input"
         android:layout_marginTop="10dp"
-        android:text="PayPal"
-        android:textSize="25sp"/>
+        android:layout_centerHorizontal="true">
+
+        <Button
+            android:id="@+id/button_choose_movie"
+            android:layout_width="187dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerInParent="true"
+            android:layout_marginEnd="19dp"
+            android:layout_toStartOf="@id/button_pay_with_paypal"
+            android:background="@drawable/rounded_button"
+            android:text="Zatwierdź"
+            android:textSize="25sp" />
+
+        <Button
+            android:id="@+id/button_pay_with_paypal"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_alignParentEnd="true"
+            android:text="PayPal"
+            android:textSize="25sp"
+            android:background="@drawable/rounded_button"
+            android:layout_marginStart="10dp"/>
+    </RelativeLayout>
 </RelativeLayout>
